--- a/animations.css
+++ b/animations.css
@@ -58,6 +58,11 @@
     -webkit-animation: slidein .4s;
 }
 
+.rnd-btn:hover{
+    background-color: deepskyblue;
+	color: white;
+}
+
 @-webkit-keyframes slidein {
   from {
     margin-left: 100%;
@@ -80,5 +85,3 @@
     width: 100%;
   }
 }
-
-
