--- a/main.css
+++ b/main.css
@@ -6,21 +6,47 @@
     margin: 0 0 .5em 0;
 }
 
-.rnd-btn{
-    /* height: 2.2em!important; */
-    width: 8em!important;
-    border-radius: 5px;
-/*    box-shadow: 3px 3px 9px darkgrey;*/
-    margin: 2px 0 0 1em;
+.button{
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
 
-.rnd-btn:hover{
+/*{
+    height: 2.2em!important;
+    width: 8em!important;
+    border-radius: 5px;
+    box-shadow: 3px 3px 9px darkgrey;
+    margin: 2px 0 0 1em;
+}*/
+
+.rnd-btn {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+}
+
+.rnd-btn:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
+/*.rnd-btn:hover{
     background-color: deepskyblue;
 	color: white;
 	opacity: 1.8;
     -moz-opacity: 1.8;
     cursor: pointer;
-}
+}*/
 
 .inError{
     background-color: red !important; 
